# link-share

./: .gitignore  CMakeLists.txt  README.md  configure.sh
.github/workflows/: blank.yml  c-cpp.yml
archiver/: CMakeLists.txt
archiver/inc/: create_new_page.hpp  http_client.hpp  http_socket.hpp  https_socket.hpp  parser.hpp
archiver/src/: CMakeLists.txt  create_new_page.cpp  http_client.cpp  http_socket.cpp  https_socket.cpp  main.cpp  parser.cpp
archiver/test/: CMakeLists.txt  create_new_page_test.cpp  http_client_test.cpp  https_socket_test.cpp  main.cpp  parser_test.cpp
client/: CMakeLists.txt
client/include/: application.hpp  client.hpp  inputUtils.hpp  inputUtils.tpp  link.hpp  model.hpp  model.tpp  presenter.hpp  presenter.tpp  request.hpp  requestForm.hpp  requestHandler.hpp  requestHandler.tpp  requestManager.hpp  response.hpp  responseParser.hpp  room.hpp  socket.hpp  userinfo.hpp  utils.h  utils.tpp  view.hpp
client/src/: CMakeLists.txt  application.cpp  client.cpp  inputUtils.cpp  link.cpp  main.cpp  model.cpp  presenter.cpp  request.cpp  requestHandler.cpp  requestManager.cpp  response.cpp  room.cpp  socket.cpp  userinfo.cpp  utils.cpp  view.cpp
client/test/: CMakeLists.txt  application.cpp  client.cpp  main.cpp  request.cpp  response.cpp  socket.cpp
inc/: create_new_page.hpp  http_client.hpp  parser.hpp
include/: application.hpp  client.hpp  request.hpp  response.hpp  socket.hpp
server/: CMakeLists.txt
server/include/: BodyParser.tpp  bodyParser.hpp  bodyParser.tpp  connection.hpp  connection.tpp  dbModel.hpp  errors.hpp  formRequest.hpp  formRequest.tpp  model.hpp  pgconnection.hpp  request.hpp  requestCommands.hpp  requestHandler.hpp  requestHandler.tpp  response.hpp  room.hpp  sender.hpp  sender.tpp  server.hpp  server.tpp  socket.hpp  user.hpp  webLink.hpp
server/include/handlers/: GetLinkSnapshotsHandler.hpp  GetUserLinksHandler.hpp  GetUserRoomHandler.hpp  addLinkHandler.hpp  addTagForLinkHandler.hpp  addUserToRoomHandler.hpp  baseHandler.hpp  createRoomHandler.hpp  createSnapshotHandler.hpp  deleteLinkHandler.hpp  deleteRoomHandler.hpp  deleteUserFromRoomHandler.hpp  getSnapshotHandler.hpp  handlerCreator.hpp  logInUserHandler.hpp  signUpUserHandler.hpp
server/include/utilities/: split.hpp
server/migrations/: down.sql  run_migrations.sh  up.sql
server/src/: bodyParser.cpp  connection.cpp  errors.cpp  formRequest.cpp  main.cpp  pgconnection.cpp  request.cpp  requestHandler.cpp  response.cpp  room.cpp  sender.cpp  server.cpp  socket.cpp  user.cpp  webLink.cpp
server/src/handlers/: SignUpUserHandler.cpp  addLinkHandler.cpp  addTagForLinkHandler.cpp  addUserToRoomHandler.cpp  createRoomHandler.cpp  deleteLinkHandler.cpp  deleteRoomHandler.cpp  deleteUserFromRoomHandler.cpp  getSnapshotHandler.cpp  handlerCreator.cpp  logInUserHandler.cpp
server/src/utilities/: split.cpp
server/tests/: CMakeLists.txt  addLinkHandlerTest.cpp  addTagForLinkHandlerTest.cpp  addUserToRoomHandlerTest.cpp  connection.cpp  createRoomHandlerTest.cpp  createSnapshotHandler.cpp  deleteLinkHandlerTest.cpp  deleteRoomHandlerTest.cpp  deleteUserFromRoomHandlerTest.cpp  getSnapshotHandler.cpp  logInUserHandler.cpp  signUpUserHandler.cpp
src/: CMakeLists.txt  application.cpp  client.cpp  http_client.cpp  parser.cpp  request.cpp  response.cpp  socket.cpp
test/: CMakeLists.txt  http_client_test.cpp  parser_test.cpp
